--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1132,7 +1132,7 @@ a:hover, a:active {
     padding: 100px 0;
 }
 
-.events-search input[type="date"],
+.events-search input[type="datetime-local"],
 .events-search input[type="text"] {
     width: 100%;
     padding: 12px 24px;
@@ -1143,6 +1143,7 @@ a:hover, a:active {
     background: #f3f8f9;
     color: #232127;
 }
+
 
 .events-search input[type="text"]::placeholder {
     font-style: italic;
