--- a/resources/views/index.html
+++ b/resources/views/index.html
@@ -8,17 +8,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
     <!-- FontAwesome CSS -->
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
 
     <!-- Swiper CSS -->
-    <link rel="stylesheet" href="css/swiper.min.css">
+    <link rel="stylesheet" href="assets/css/swiper.min.css">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="style.css">
-    <script src="js/custom.js"></script>
+    <link rel="stylesheet" href="assets/style.css">
+ c   <script src="assets/js/custom.js"></script>
 </head>
 <body>
 <header class="site-header">
@@ -463,14 +463,14 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <span><svg viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"/></svg></span>
 </div>
 
-<script type='text/javascript' src='js/jquery.js'></script>
-<script type='text/javascript' src='js/masonry.pkgd.min.js'></script>
-<script type='text/javascript' src='js/jquery.collapsible.min.js'></script>
-<script type='text/javascript' src='js/swiper.min.js'></script>
-<script type='text/javascript' src='js/jquery.countdown.min.js'></script>
-<script type='text/javascript' src='js/circle-progress.min.js'></script>
-<script type='text/javascript' src='js/jquery.countTo.min.js'></script>
-<script type='text/javascript' src='js/custom.js'></script>
+<script type='text/javascript' src='assets/js/jquery.js'></script>
+<script type='text/javascript' src='assets/js/masonry.pkgd.min.js'></script>
+<script type='text/javascript' src='assets/js/jquery.collapsible.min.js'></script>
+<script type='text/javascript' src='assets/js/swiper.min.js'></script>
+<script type='text/javascript' src='assets/js/jquery.countdown.min.js'></script>
+<script type='text/javascript' src='assets/js/circle-progress.min.js'></script>
+<script type='text/javascript' src='assets/js/jquery.countTo.min.js'></script>
+<script type='text/javascript' src='assets/js/custom.js'></script>
 
 </body>
 </html>
